1 pixel navigation fix, submenus font was lowered, for footer fixed horizontal scroll, pixel perfected slider, fixed v-shape rotation

--- a/css/footer.css
+++ b/css/footer.css
@@ -18,10 +18,10 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     justify-items: center;
     padding-inline: 16px;
+    overflow: hidden;
 }
 .footer__item{
     margin: 0 20px 20px;
-    
 }
 .footer__title{
     font-family: 'Poppins';
